# summary-bench

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  run.bat
docs/: CONTRIBUTING.md
results/: results-bytedance-seed-oss-36b.json  results-deepseek-deepseek-v4-flash.json  results-deepseek-deepseek-v4-pro.json  results-gemma-2-27b-it.json  results-google-gemma-4-26b-a4b.json  results-google-gemma-4-31b.json  results-google-gemma-4-e2b.json  results-google-gemma-4-e4b.json  results-google_gemma-3-27b-it.json  results-gpt-oss-20b.json  results-granite-4.0-h-micro.json  results-granite-4.0-h-tiny.json  results-lfm2-2.6b-exp.json  results-lfm2-8b-a1b.json  results-lfm2.5-1.2b-instruct_q4_k_m.json  results-lfm2.5-vl-1.6b.json  results-liquid-lfm2-24b-a2b.json  results-llama-2-7b.json  results-meta-llama-3-70b-instruct.json  results-minimax-minimax-m3.json  results-ministral-3-3b-instruct-2512.json  results-mistral-small-instruct-2409.json  results-mistralai_ministral-3-8b-reasoning-2512.json  results-moonshotai_kimi-linear-48b-a3b-instruct.json  results-nvidia-nemotron-3-nano-4b.json  results-nvidia_nemotron-cascade-2-30b-a3b.json  results-qwen-qwen3.5-27b.json  results-qwen-qwen3.5-2b.json  results-qwen-qwen3.5-35b-a3b.json  results-qwen-qwen3.5-4b.json  results-qwen-qwen3.5-9b.json  (+5 more)
script/: interactive_benchmark.py  pyproject.toml
script/summaryarena/: __init__.py  __main__.py  cli.py  config.py  datasets.py  metrics.py  models.py  prompts.py  providers.py  runner.py
script/tests/: __init__.py  test_models.py  test_runner.py
web/: .gitignore  (+3 more)
(+50 files in other folders)
